made paths more restful
